@@ -1009,6 +1009,16 @@ parseURL2(char *url, ParsedURL *pu, ParsedURL *current)
 	pu->host = current->host;
 	pu->port = current->port;
 	if (pu->file && *pu->file) {
+#ifdef USE_EXTERNAL_URI_LOADER	    
+	    if (pu->scheme == SCM_UNKNOWN
+		&& strchr(pu->file, ':') == NULL
+		&& current && (p = strchr(current->file, ':')) != NULL) {
+		pu->file = Sprintf("%s:%s", 
+				   allocStr(current->file, 
+					    p - current->file),
+				   pu->file)->ptr;
+	    } else
+#endif
 	    if (
 #ifdef USE_GOPHER
 		   pu->scheme != SCM_GOPHER &&
