@@ -1,3 +1,8 @@
+2003-05-11  Fumitoshi UKAI  <ukai@debian.or.jp>
+
+	* [w3m-dev 03891] Re: urimethodmap and relative URL
+	* url.c (parseURL2): copy scheme part into pu->file when SCM_UNKNOWN
+
 2003-05-07  Hiroyuki Ito <hito@crl.go.jp>
 
 	* [w3m-dev 03889] Progress bar in Download List Panel
